[project]
name = "cnki-mcp"
version = "0.1.0"
description = "CNKI (知网) MCP Server — 论文搜索与详情获取"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "CNKI MCP Maintainers" },
]
keywords = ["cnki", "mcp", "academic", "paper-search", "知网"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastmcp>=2.0.0",
    "selenium>=4.0.0",
    "webdriver-manager>=4.0.0",
]

[project.scripts]
cnki-mcp = "cnki_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cnki_mcp"]
